export interface DocumentDTO {
  id: number;
  name: string;
  description?: string;
  url?: string;
}